# cups-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
examples/: authentication.rs  complete_workflow.rs  create_job.rs  discover_printers.rs  enum_destinations.rs  job_workflow.rs  list_printers.rs  media_sizes.rs  multi_document.rs  print_document.rs  print_with_options.rs  printer_capabilities.rs  printer_options.rs  server_config.rs
src/: auth.rs  bindings.rs  config.rs  connection.rs  constants.rs  error.rs  error_helpers.rs  ipp.rs  lib.rs  options.rs
src/destination/: dest_info.rs  media_size.rs  mod.rs  printer_state.rs
src/job/: lifecycle.rs  management.rs  mod.rs  options.rs  status.rs
tests/: integration_tests.rs
tests/common/: mod.rs
