[package]
name = "cups_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust bindings for CUPS (Common UNIX Printing System)"
repository = "https://github.com/Gmin2/cups-rs"
documentation = "https://docs.rs/cups-rs"
readme = "README.md"

[dependencies]
libc = "0.2.171"
thiserror = "1.0.40"
chrono = "0.4.26"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.32"

[[example]]
name = "discover_printers"
path = "examples/discover_printers.rs"

[[example]]
name = "complete_workflow" 
path = "examples/complete_workflow.rs"

[[example]]
name = "printer_capabilities"
path = "examples/printer_capabilities.rs"

[[example]]
name = "print_with_options"
path = "examples/print_with_options.rs"